--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,22 +3,39 @@
 <head>
   <meta charset="utf-8">
   <title>Header fragment</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<header class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
+<header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" th:fragment="header">
   <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Réservations</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li th:classappend="${module == 'home' ? 'active' : ''}">
-          <a href="#" th:href="@{/}">Home</a>
+    <a class="navbar-brand" href="#">Réservations</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+      <ul class="navbar-nav">
+        <li th:classappend="${module == 'home' ? 'active' : ''}" class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/shows}">Home</a>
         </li>
-        <li th:classappend="${module == 'artists' ? 'active' : ''}">
-          <a href="#" th:href="@{/artists}">Artists</a>
+        <li th:classappend="${module == 'artists' ? 'active' : ''}" class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/artists}">Artists</a>
         </li>
       </ul>
+      <!-- header.html -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/logout}" th:if="${loggedIn}">Déconnexion</a>
+          <a class="nav-link" href="#" th:href="@{/login}" th:unless="${loggedIn}">Connexion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/registration}" th:unless="${loggedIn}">S'inscrire</a>
+        </li>
+      </ul>
+
     </div>
   </div>
 </header>
