--- a/src/main/resources/templates/representation/show.html
+++ b/src/main/resources/templates/representation/show.html
@@ -2,7 +2,11 @@
 <html xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
       layout:decorate="~{layouts/main}">
 <head>
-  <title>Fiche d'une représentation</title>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+    <title>Fiche d'une représentation</title>
 </head>
 <body>
 <div class="container">
