--- a/src/main/resources/templates/show/index.html
+++ b/src/main/resources/templates/show/index.html
@@ -1,31 +1,85 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
-      layout:decorate="~{layouts/main}">
-<head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<html
+xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="layouts/main">
 
+<head>
+<link
+  th:href="@{/css/style.css}" rel="stylesheet">
+
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+  <link href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+  <!-- DataTables JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- DataTables JavaScript -->
+  <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+  <script
+          type="text/javascript" th:src="@{/js/actions.js}">
+  </script>
+
+  <style>
+        .wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 14px/1.5 sans-serif; }
+        .custom-select {
+            appearance: none;
+            -moz-appearance: none;
+            -webkit-appearance: none;
+            border: 1px solid #ced4da;
+            padding: 0.375rem 2.75rem 0.375rem 0.75rem;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 8 8'%3e%3cpath fill='%23747747' d='M4 5l3-3H1zm0 3l3-3H1z'/%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: right 0.75rem center;
+            background-size: 8px 10px;
+            font-size: 1rem;
+            line-height: 1.5;
+            border-radius: 0.25rem;
+        }
+    </style>
   <title>Liste des spectacles</title>
 </head>
 <body>
 <div class="container">
-  <div layout:fragment="content">
+  <div layout:fragment="content" class="wrapper">
     <h1 th:text="${title}">Liste des spectacles</h1>
 
-    <ul th:unless="${#lists.isEmpty(shows)}">
-      <li th:each="show : ${shows}">
-        <span th:text="${show.title}">Ayiti</span>
-        <span th:if="${show.bookable}" th:text="${show.price} + ' €'">9.99 €</span>
 
-        <span th:if="${#lists.size(show.representations)==1}">- 1 représentation</span>
-        <span th:if="${#lists.size(show.representations)>1}" th:text="|- ${#lists.size(show.representations)} représentations|">- 2 représentations</span>
-        <em th:if="${#lists.size(show.representations)==0}">aucune représentation</em>
 
-        <a th:href="@{/shows/{id}(id=${show.id})}">View</a>
-      </li>
-    </ul>
+    <table id="shows-table" class="display">
+      <thead>
+      <tr>
+        <th>Titre</th>
+        <th>Auteur</th>
+        <th>Lieu</th>
+        <th>Représentations</th>
+        <th>Prix</th>
+        <th>Réservable</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="show : ${shows}">
+        <td th:text="${show.title}">Ayiti</td>
+        <td>
+                <span th:each="author : ${show.authors}">
+                    <span th:text="${author.firstname} + ' ' + ${author.lastname}">Firstname Lastname</span>
+                </span>
+        </td>
+        <td th:if="${show.location != null}" th:text="${show.location.designation}">Art Center</td>
+        <td th:unless="${show.location != null}">N/A</td>
+        <td th:text="${#lists.size(show.representations)}">0</td>
+        <td th:text="${show.price} + ' €'">9.99 €</td>
+        <td th:text="${show.bookable} ? 'Oui' : 'Non'">Non</td>
+      </tr>
+      </tbody>
+    </table>
+
+
   </div>
 </div>
+
 </body>
 </html>
