--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Header fragment</title>
+  <link
+          th:href="@{/css/style.css}" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" th:fragment="header">
@@ -24,18 +29,24 @@
         <li th:classappend="${module == 'artists' ? 'active' : ''}" class="nav-item">
           <a class="nav-link" href="#" th:href="@{/artists}">Artists</a>
         </li>
+
       </ul>
-      <!-- header.html -->
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#" th:href="@{/logout}" th:if="${loggedIn}">Déconnexion</a>
           <a class="nav-link" href="#" th:href="@{/login}" th:unless="${loggedIn}">Connexion</a>
         </li>
+
+        <li class="nav-item" th:if="${role == 'admin'}">
+          <a class="nav-link" href="#" th:href="@{/admin}"><i class="fas fa-user-shield"></i>Admin</a>
+        </li>
+        <li class="nav-item" th:if="${role == 'member'}">
+          <a class="nav-link" href="#" th:href="@{/member}"> <i class="fas fa-user"></i> Profil</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#" th:href="@{/registration}" th:unless="${loggedIn}">S'inscrire</a>
         </li>
       </ul>
-
     </div>
   </div>
 </header>
