--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -6,9 +6,10 @@
 
     <title>Registration Form</title>
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -31,7 +32,7 @@
             <span class="text-danger" th:errors="*{firstname}"></span>
         </div>
         <div class="form-group">
-            <label for="lastname">lastname:</label>
+            <label for="lastname">Lastname:</label>
             <input th:field="*{lastname}" type="text" id="lastname" name="lastname" placeholder="Enter your lastname" required>
             <span class="text-danger" th:errors="*{lastname}"></span>
         </div>
