--- a/src/main/resources/templates/user/updateConfirmation.html
+++ b/src/main/resources/templates/user/updateConfirmation.html
@@ -1,26 +1,26 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Confirmation</title>
+    <title>update Confirmation</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Registration Confirmation</h3>
+                    <h3 class="panel-title">Update Confirmation</h3>
                 </div>
                 <div class="panel-body">
-                    <p>Congratulations! Your registration was successful.</p>
-                    <p>Please check your email for further instructions.</p>
+                    <p>Congratulations! Your changes was successful.</p>
+                    <a th:href="@{/member}">retourner a la page profil</a>
                 </div>
             </div>
         </div>
