--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,76 +1,67 @@
-body,html{
+body, html {
     height: 100%;
 }
 
 /* remove outer padding */
-.main .row{
-    padding: 0px;
-    margin: 0px;
+.main .row {
+    padding: 0;
+    margin: 0;
 }
 
-/*Remove rounded coners*/
-
+/* Remove rounded corners */
 nav.sidebar.navbar {
-    border-radius: 0px;
+    border-radius: 0;
 }
 
-nav.sidebar, .main{
+nav.sidebar, .main {
     -webkit-transition: margin 200ms ease-out;
     -moz-transition: margin 200ms ease-out;
     -o-transition: margin 200ms ease-out;
     transition: margin 200ms ease-out;
 }
 
-/* Add gap to nav and right windows.*/
-.main{
-    padding: 10px 10px 0 10px;
+/* Add gap to nav and right windows */
+.main {
+    padding: 10px;
 }
 
-/* .....NavBar: Icon only with coloring/layout.....*/
-
-/*small/medium side display*/
+/* Small/medium side display */
 @media (min-width: 768px) {
-
-    /*Allow main to be next to Nav*/
-    .main{
+    .main {
         position: absolute;
-        width: calc(100% - 40px); /*keeps 100% minus nav size*/
+        width: calc(100% - 40px); /* keeps 100% minus nav size */
         margin-left: 40px;
         float: right;
     }
 
-    /*lets nav bar to be showed on mouseover*/
-    nav.sidebar:hover + .main{
+    nav.sidebar:hover + .main {
         margin-left: 200px;
     }
 
-    /*Center Brand*/
-    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-        margin-left: 0px;
-    }
-    /*Center Brand*/
-    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
-        text-align: center;
-        width: 100%;
-        margin-left: 0px;
+    nav.sidebar.navbar.sidebar > .container .navbar-brand,
+    .navbar > .container-fluid .navbar-brand {
+        margin-left: 0;
     }
 
-    /*Center Icons*/
-    nav.sidebar a{
+    nav.sidebar .navbar-brand,
+    nav.sidebar .navbar-header {
+        text-align: center;
+        width: 100%;
+        margin-left: 0;
+    }
+
+    nav.sidebar a {
         padding-right: 13px;
     }
 
-    /*adds border top to first nav box */
-    nav.sidebar .navbar-nav > li:first-child{
+    nav.sidebar .navbar-nav > li:first-child {
         border-top: 1px #e5e5e5 solid;
     }
 
-    /*adds border to bottom nav boxes*/
-    nav.sidebar .navbar-nav > li{
+    nav.sidebar .navbar-nav > li {
         border-bottom: 1px #e5e5e5 solid;
     }
 
-    /* Colors/style dropdown box*/
     nav.sidebar .navbar-nav .open .dropdown-menu {
         position: static;
         float: none;
@@ -82,62 +73,55 @@ nav.sidebar, .main{
         box-shadow: none;
     }
 
-    /*allows nav box to use 100% width*/
-    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
-        padding: 0 0px 0 0px;
+    nav.sidebar .navbar-collapse,
+    nav.sidebar .container-fluid {
+        padding: 0;
     }
 
-    /*colors dropdown box text */
-    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
         color: #777;
     }
 
-    /*gives sidebar width/height*/
-    nav.sidebar{
+    nav.sidebar {
         width: 200px;
         height: 100%;
         margin-left: -160px;
         float: left;
         z-index: 8000;
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
-    /*give sidebar 100% width;*/
     nav.sidebar li {
         width: 100%;
     }
 
-    /* Move nav to full on mouse over*/
-    nav.sidebar:hover{
-        margin-left: 0px;
+    nav.sidebar:hover {
+        margin-left: 0;
     }
-    /*for hiden things when navbar hidden*/
-    .forAnimate{
+
+    .forAnimate {
         opacity: 0;
     }
 }
 
-/* .....NavBar: Fully showing nav bar..... */
-
 @media (min-width: 1330px) {
-    /*Allow main to be next to Nav*/
-    .main{
-        width: calc(100% - 200px); /*keeps 100% minus nav size*/
+    .main {
+        width: calc(100% - 200px); /* keeps 100% minus nav size */
         margin-left: 200px;
     }
 
-    /*Show all nav*/
-    nav.sidebar{
-        margin-left: 0px;
+    nav.sidebar {
+        margin-left: 0;
         float: left;
     }
-    /*Show hidden items on nav*/
-    nav.sidebar .forAnimate{
+
+    nav.sidebar .forAnimate {
         opacity: 1;
     }
 }
 
-nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
+nav.sidebar .navbar-nav .open .dropdown-menu > li > a:hover,
+nav.sidebar .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #CCC;
     background-color: transparent;
 }
