--- a/src/main/resources/templates/artist/edit.html
+++ b/src/main/resources/templates/artist/edit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
+<html lang="fr" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/main}">
 <head>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -9,45 +10,57 @@
 
   <title>Modification d'un artiste</title>
   <style>
-.fieldError { color: red; }
-</style>
-
+    .fieldError { color: red; }
+    .form-container {
+      max-width: 600px;
+      margin: 2em auto;
+      background: #f8f9fa;
+      padding: 2em;
+      border-radius: 0.5em;
+      box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    }
+    .form-container h1 {
+      margin-bottom: 1.5em;
+    }
+    .btn-group {
+      margin-top: 1.5em;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-  <div layout:fragment="content">
-    <h1 th:text="|${artist.firstname}  ${artist.lastname}|">Bob Sull</h1>
+  <div layout:fragment="content" class="form-container">
+    <h1 th:text="|Modification de ${artist.firstname} ${artist.lastname}|">Modification d'un artiste</h1>
 
     <form th:action="@{/artists/{id}/edit(id=${artist.id})}" th:object="${artist}" th:method="put">
-      <div>
-        <label>Id:</label>
-        <span th:text="${artist.id}">1</span>
+      <div class="form-group">
+        <label for="artistId">Id:</label>
+        <span id="artistId" th:text="${artist.id}">1</span>
       </div>
-      <div>
-        <label>Firstname:</label>
-        <input type="text" th:field="*{firstname}">
-        <p th:if="${#fields.hasErrors('firstname')}"
-           th:errors="*{firstname}" th:errorclass="fieldError"></p>
+      <div class="form-group">
+        <label for="firstname">Prénom:</label>
+        <input type="text" id="firstname" class="form-control" th:field="*{firstname}">
+        <div th:if="${#fields.hasErrors('firstname')}" class="fieldError" th:errors="*{firstname}"></div>
+      </div>
+      <div class="form-group">
+        <label for="lastname">Nom:</label>
+        <input type="text" id="lastname" class="form-control" th:field="*{lastname}">
+        <div th:if="${#fields.hasErrors('lastname')}" class="fieldError" th:errors="*{lastname}"></div>
+      </div>
+      <div th:if="${role == 'admin'}">
+      <div class="btn-group">
 
+        <button type="submit" class="btn btn-primary">Modifier</button>
+        <button type="reset" class="btn btn-secondary">Réinitialiser</button>
       </div>
-      <div>
-        <label>Lastname:</label>
-        <input type="text" th:field="*{lastname}">
-        <p th:if="${#fields.hasErrors('lastname')}"
-           th:errors="*{lastname}" th:errorclass="fieldError"></p>
-
-      </div>
-      <div>
-        <button type="submit" th:text="Modifier">Modifier</button>
-        <button type="reset" th:text="Réinitialiser">Réinitialiser</button>
-        <a th:href="${back}">Annuler</a>
+        <a th:href="${back}" class="btn btn-light">Annuler</a>
       </div>
     </form>
 
-    <nav><a th:href="@{/artists}">Retour à l'index</a></nav>
+    <nav class="mt-4">
+      <a th:href="@{/artists}" class="btn btn-link">Retour à l'index</a>
+    </nav>
   </div>
 </div>
 </body>
-
-
 </html>
