--- a/src/main/resources/templates/show/index.html
+++ b/src/main/resources/templates/show/index.html
@@ -24,33 +24,28 @@ layout:decorate="layouts/main">
   </script>
 
   <style>
-        .wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 14px/1.5 sans-serif; }
-        .custom-select {
-            appearance: none;
-            -moz-appearance: none;
-            -webkit-appearance: none;
-            border: 1px solid #ced4da;
-            padding: 0.375rem 2.75rem 0.375rem 0.75rem;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 8 8'%3e%3cpath fill='%23747747' d='M4 5l3-3H1zm0 3l3-3H1z'/%3e%3c/svg%3e");
-            background-repeat: no-repeat;
-            background-position: right 0.75rem center;
-            background-size: 8px 10px;
-            font-size: 1rem;
-            line-height: 1.5;
-            border-radius: 0.25rem;
-        }
-    </style>
+    .wrapper {
+      margin: 2em auto;
+      max-width: 1200px;
+      width: 95%;
+      font: 14px/1.5 sans-serif;
+    }
+    .dataTables_wrapper .dataTables_filter input {
+      margin-left: 0.5em;
+    }
+    .table th, .table td {
+      vertical-align: middle;
+    }
+  </style>
   <title>Liste des spectacles</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-5">
   <div layout:fragment="content" class="wrapper">
-    <h1 th:text="${title}">Liste des spectacles</h1>
+    <h1 class="mb-4" th:text="${title}">Liste des spectacles</h1>
 
-
-
-    <table id="shows-table" class="display">
-      <thead>
+    <table id="shows-table" class="table table-striped table-bordered display nowrap" style="width:100%">
+      <thead class="thead-dark">
       <tr>
         <th>Titre</th>
         <th>Auteur</th>
@@ -58,28 +53,29 @@ layout:decorate="layouts/main">
         <th>Représentations</th>
         <th>Prix</th>
         <th>Réservable</th>
+        <th>Action</th>
       </tr>
       </thead>
       <tbody>
       <tr th:each="show : ${shows}">
         <td th:text="${show.title}">Ayiti</td>
         <td>
-                <span th:each="author : ${show.authors}">
-                    <span th:text="${author.firstname} + ' ' + ${author.lastname}">Firstname Lastname</span>
-                </span>
+              <span th:each="author : ${show.authors}">
+                <span th:text="${author.firstname} + ' ' + ${author.lastname}">Firstname Lastname</span>
+              </span>
         </td>
         <td th:if="${show.location != null}" th:text="${show.location.designation}">Art Center</td>
         <td th:unless="${show.location != null}">N/A</td>
         <td th:text="${#lists.size(show.representations)}">0</td>
         <td th:text="${show.price} + ' €'">9.99 €</td>
         <td th:text="${show.bookable} ? 'Oui' : 'Non'">Non</td>
+        <td>
+          <a th:href="@{/shows/{id}(id=${show.id})}" class="btn btn-primary">Voir</a>
+        </td>
       </tr>
       </tbody>
     </table>
-
-
   </div>
 </div>
-
 </body>
 </html>
