--- a/src/main/resources/templates/show/show.html
+++ b/src/main/resources/templates/show/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html   xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="layouts/main">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/main">
 <head>
   <meta charset="UTF-8">
   <title>Fiche d'un spectacle</title>
@@ -11,52 +11,64 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div layout:fragment="content" >
+<div layout:fragment="content" class="container mt-3">
 
-  <div class="mt-3">
-    <h1 th:text="${show.title}">Ayiti</h1>
-
-    <p th:if="${show.posterUrl}"><img th:src="@{'/images/'+${show.posterUrl}}" th:alt="${show.title}" src="/images/default.jpg" width="200"></p>
-    <canvas th:unless="${show.posterUrl}" width="200" height="100" style="border:1px solid #000000;"></canvas>
-
-    <p th:if="${show.location}"><strong>Lieu de création:</strong> <span th:text="${show.location.designation}">Art Center</span></p>
-
-    <p><strong>Prix:</strong> <span th:text="${show.price} + ' €'">9.99 €</span></p>
-
-    <p th:if="${show.bookable}"><em>Réservable</em></p>
-    <p th:unless="${show.bookable}"><em>Non réservable</em></p>
-
-    <h2>Liste des représentations</h2>
-    <ul th:if="${#lists.size(show.representations)>=1}">
-      <li th:each="representation : ${show.representations}"
-          th:text="${#temporals.format(representation.when,'dd-MM-yyyy HH:mm')}">12-10-2012 13:30</li>
-    </ul>
-    <p th:if="${#lists.size(show.representations)==0}">Aucune représentation</p>
-
-    <h2>Liste des artistes</h2>
-    <p><strong>Auteur:</strong>
-      <span th:each="auteur,iter : ${collaborateurs['auteur']}" th:text="${auteur.firstname}+' '+${auteur.lastname}
-	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
-	            	Firstname Lastname
-	        	</span>
-    </p>
-    <p><strong>Metteur en scène:</strong>
-      <span th:each="scenographe,iter : ${collaborateurs['scénographe']}" th:text="${scenographe.firstname}+' '+${scenographe.lastname}
-	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
-	            	Firstname Lastname
-	        	</span>
-    </p>
-    <p><strong>Distribution:</strong>
-      <span th:each="comedien,iter : ${collaborateurs['comédien']}" th:text="${comedien.firstname}+' '+${comedien.lastname}
-	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
-	            	Firstname Lastname
-	        	</span>
-    </p>
-
-    <nav><a th:href="@{/shows}">Retour à l'index</a></nav>
+  <div class="card">
+    <div class="card-header">
+      <h1 class="card-title" th:text="${show.title}">Ayiti</h1>
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-4">
+          <p th:if="${show.posterUrl}">
+            <img th:src="@{'/images/'+${show.posterUrl}}" th:alt="${show.title}" src="/images/default.jpg" class="img-fluid">
+          </p>
+          <p th:unless="${show.posterUrl}">
+            <canvas width="200" height="100" style="border:1px solid #000000;"></canvas>
+          </p>
+        </div>
+        <div class="col-md-8">
+          <p th:if="${show.location}"><strong>Lieu de création:</strong> <span th:text="${show.location.designation}">Art Center</span></p>
+          <p><strong>Prix:</strong> <span th:text="${show.price} + ' €'">9.99 €</span></p>
+          <p th:if="${show.bookable}" class="text-success"><em>Réservable</em></p>
+          <p th:unless="${show.bookable}" class="text-danger"><em>Non réservable</em></p>
+          <h2>Liste des représentations</h2>
+          <ul th:if="${#lists.size(show.representations) >= 1}">
+            <li th:each="representation : ${show.representations}"
+                th:text="${#temporals.format(representation.when,'dd-MM-yyyy HH:mm')}">12-10-2012 13:30</li>
+          </ul>
+          <p th:if="${#lists.size(show.representations) == 0}">Aucune représentation</p>
+          <h2>Liste des artistes</h2>
+          <p><strong>Auteur:</strong>
+            <span th:each="auteur,iter : ${collaborateurs['auteur']}" th:text="${auteur.firstname}+' '+${auteur.lastname}
+             + (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+              Firstname Lastname
+            </span>
+          </p>
+          <p><strong>Metteur en scène:</strong>
+            <span th:each="scenographe,iter : ${collaborateurs['scénographe']}" th:text="${scenographe.firstname}+' '+${scenographe.lastname}
+             + (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+              Firstname Lastname
+            </span>
+          </p>
+          <p><strong>Distribution:</strong>
+            <span th:each="comedien,iter : ${collaborateurs['comédien']}" th:text="${comedien.firstname}+' '+${comedien.lastname}
+             + (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+              Firstname Lastname
+            </span>
+          </p>
+          <!-- Ajout du bouton "Ajouter au panier" -->
+          <form th:action="@{/cart/{id}(id=${show.id})}" method="post">
+            <button type="submit" class="btn btn-primary">Ajouter au panier</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="card-footer">
+      <nav><a th:href="@{/shows}" class="btn btn-secondary">Retour à l'index</a></nav>
+    </div>
   </div>
+
 </div>
-
-
 </body>
 </html>
