--- a/src/main/resources/templates/user/registrationConfirmation.html
+++ b/src/main/resources/templates/user/registrationConfirmation.html
@@ -6,25 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Confirmation</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Registration Confirmation</h3>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="alert alert-info" role="alert">
+                    <h4 class="alert-heading">Registration Confirmation</h4>
                 </div>
-                <div class="panel-body">
                     <p>Congratulations! Your registration was successful.</p>
                     <p>Please check your email for further instructions.</p>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 </body>
 </html>
