feat service paiment et flux rss

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html  xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <title>Header fragment</title>
-  <link
-          th:href="@{/css/style.css}" rel="stylesheet">
+
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="alternate" type="application/rss+xml" title="Flux RSS des spectacles" th:href="@{/shows/feed.rss}" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
@@ -33,6 +34,11 @@
           <a class="nav-link" href="#" th:href="@{/cart}" th:if="${loggedIn}">
             <i class="fas fa-shopping-cart"></i> Panier
             <span class="badge badge-pill badge-danger" th:text="${cartItemCount}">0</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/shows/feed.rss}" title="S'abonner au flux RSS">
+            <i class="fas fa-rss"></i> Flux RSS
           </a>
         </li>
       </ul>
