--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,78 +1,90 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/main}">
 
 <head>
-
     <title>Registration Form</title>
-
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .content {
+            flex: 1;
+        }
+        .form-container {
+            margin-top: 50px;
+        }
+        .form-group span.text-danger {
+            margin-top: 5px;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
+<div class="container content">
     <div layout:fragment="content">
-    <div class="message" th:if="${message != null}">
-        [[${message}]]
-    </div>
-    <h2>Registration Form</h2>
-    <form
-            th:action="@{/registration}"
-            method="post"
-            role="form"
-            th:object="${user}"
-
-    >
-        <div class="form-group">
-            <label for="firstname">Firstname:</label>
-            <input th:field="*{firstname}" type="text" id="firstname" name="firstname" placeholder="Enter your firstname" required>
-            <span class="text-danger" th:errors="*{firstname}"></span>
+        <div class="row justify-content-center form-container">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h2>Registration Form</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="alert alert-info" th:if="${message != null}">
+                            [[${message}]]
+                        </div>
+                        <form th:action="@{/registration}" method="post" th:object="${user}">
+                            <div class="form-group">
+                                <label for="firstname">Firstname:</label>
+                                <input th:field="*{firstname}" type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter your firstname" required>
+                                <span class="text-danger" th:errors="*{firstname}"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="lastname">Lastname:</label>
+                                <input th:field="*{lastname}" type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter your lastname" required>
+                                <span class="text-danger" th:errors="*{lastname}"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="login">Login:</label>
+                                <input th:field="*{login}" type="text" class="form-control" id="login" name="login" placeholder="Enter your login" required>
+                                <span class="text-danger" th:errors="*{login}"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input th:field="*{email}" type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+                                <span class="text-danger" th:errors="*{email}"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="langue">Langue:</label>
+                                <select th:field="*{langue}" class="form-control" id="langue" name="langue" required>
+                                    <option value="fr">Français</option>
+                                    <option value="nl">Néerlandais</option>
+                                    <option value="en">Anglais</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input th:field="*{password}" type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+                                <span class="text-danger" th:errors="*{password}"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="confirmPassword">Confirm Password:</label>
+                                <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+                                <span class="text-danger" th:errors="*{confirmPassword}"></span>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="lastname">Lastname:</label>
-            <input th:field="*{lastname}" type="text" id="lastname" name="lastname" placeholder="Enter your lastname" required>
-            <span class="text-danger" th:errors="*{lastname}"></span>
-        </div>
-        <div class="form-group">
-            <label for="login">l:</label>
-            <input th:field="*{login}" type="text" id="login" name="login" placeholder="Enter your login" required>
-            <span class="text-danger" th:errors="*{login}"></span>
-        </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input th:field="*{email}" type="email" id="email" name="email" placeholder="Enter your email" required>
-
-        </div>
-        <div class="form-group">
-            <label for="langue">Langue:</label>
-            <select th:field="*{langue}" id="langue" name="langue" required>
-                <option value="fr">Français</option>
-                <option value="nl">Néerlandais</option>
-                <option value="en">Anglais</option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input th:field="*{password}" type="password" id="password" name="password" placeholder="Enter your password" required>
-            <span class="text-danger" th:errors="*{password}"></span>
-        </div>
-        <div class="form-group">
-            <label for="confirmPassword">Confirm Password:</label>
-            <input th:field="*{confirmPassword}" type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
-            <span class="text-danger" th:errors="*{confirmPassword}"></span>
-        </div>
-
-        <input type="submit" value="Register">
-
-    </form>
-
     </div>
 </div>
-
-
 </body>
 </html>
