--- a/src/main/resources/templates/show/show.html
+++ b/src/main/resources/templates/show/show.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <title>Fiche d'un spectacle</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="alternate" type="application/rss+xml" title="Flux RSS des spectacles" th:href="@{/shows/feed.rss}" />
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
