--- a/src/main/resources/templates/user/updateConfirmation.html
+++ b/src/main/resources/templates/user/updateConfirmation.html
@@ -1,28 +1,42 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>update Confirmation</title>
+    <title>Update Confirmation</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .card {
+            width: 100%;
+            max-width: 500px;
+        }
+    </style>
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Update Confirmation</h3>
-                </div>
-                <div class="panel-body">
-                    <p>Congratulations! Your changes was successful.</p>
-                    <a th:href="@{/member}">retourner a la page profil</a>
-                </div>
-            </div>
+<div class="container content">
+    <div class="card text-center">
+        <div class="card-header">
+            <h3 class="card-title">Update Confirmation</h3>
+        </div>
+        <div class="card-body">
+            <p>Congratulations! Your changes were successful.</p>
+            <a th:href="@{/member}" class="btn btn-primary">Return to Profile Page</a>
         </div>
     </div>
 </div>
